[package]
authors = ["Gianmarco Garrisi <gianmarcogarrisi@tutanota.com>"]
categories = ["simulation", "science"]
description = "A discrete-time events simulation framework inspired by Simpy"
keywords = ["simulation", "framework", "time", "discrete", "events"]
license = "GPL-3.0"
name = "qsim"
readme = "README.md"
repository = "https://github.com/shenjiangqiu/qsim"
version = "0.0.1"

edition = "2021"

[dependencies]
downcast-rs = "1.2.0"
genawaiter = "0.99.1"
log = "0.4.17"

[dev-dependencies]
rand = {version = "0.8.3", features = ["small_rng"]}
rand_distr = "0.4"
